--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,8 @@ python-dotenv = "^0.20.0"
 Faker = "^13.15.0"
 fastapi-login = "^1.8.2"
 deepdiff = "^5.8.1"
+pandas = "^1.5.0"
+pytest = "^7.1.3"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.1.2"
