--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ fastapi-login = "^1.8.2"
 deepdiff = "^5.8.1"
 pandas = "^1.5.0"
 pytest = "^7.1.3"
+pylint = "^2.16.3"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.1.2"
