--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,10 @@ deepdiff = "^5.8.1"
 pandas = "^1.5.0"
 pytest = "^7.1.3"
 pylint = "^2.16.3"
+matplotlib = "^3.7.1"
+fpdf = "^1.7.2"
+Jinja2 = "^3.1.2"
+weasyprint = "^58.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.1.2"
